--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/6f117cf524.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="site.css">
     <title>em-notes</title>
   </head>
